--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Class Test 01</title>
+    <title>Class Test 1</title>
 </head>
+
 <body>
-    
+    <section id="main">
+        <div class="container">
+            <div class="title">User Registration</div>
+            <div class="form">
+                <form action="#">
+                    <div class="name">
+                        <input type="text" name="fName" id="fName" placeholder="First Name" class="input">
+                        <input type="text" name="lName" id="lName" placeholder="Last Name" class="input">
+                    </div>
+                    <div class="fields">
+                        <input type="email" name="email" id="email" placeholder="Email" class="input">
+                        <input type="password" name="pass" id="pass" placeholder="Password" class="input">
+                        <input type="password" name="cPass" id="cPass" placeholder="Confirm Password" class="input">
+                    </div>
+                    <div class="checkCon">
+                        <input type="checkbox" name="check" id="check">
+                        <label class="check" for="check">I accept the Terms of Use & Privacy Policy</label>
+                    </div>
+                    <div id="submit">
+                        <input type="submit" value="Register Now" class="submit">
+                    </div>
+                </form>
+            </div>
+            <div class="account">
+                <span>Already have an account? </span>
+                <a href="#">Sign In</a>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
